# great-ai

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  check-python.sh  dev-requirements.txt  example_secrets.ini  ideas.drawio  index.html  index.md  map.ipynb  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  scope.drawio  setup.cfg  sitemap.xml  tox.ini
great_ai/: README.md  __init__.py  __main__.py  constants.py  context.py  example_secrets.ini  open_s3.md  parse_arguments.py  requirements.txt  setup.cfg
great_ai/deploy/: __init__.py  great_ai.py
great_ai/deploy/routes/: __init__.py  bootstrap_dashboard.py  bootstrap_docs_endpoints.py  bootstrap_meta_endpoints.py  bootstrap_prediction_endpoint.py  route_config.py
great_ai/deploy/routes/dashboard/: create_dash_app.py  get_footer.py  get_traces_table.py
great_ai/deploy/routes/dashboard/assets/: index.css
great_ai/errors/: __init__.py
great_ai/exceptions/: __init__.py
great_ai/helper/: __init__.py  assert_function_is_not_finalised.py  freeze_arguments.py  get_arguments.py  get_function_metadata_store.py  text_to_hex_color.py
great_ai/large_file/: __init__.py  __main__.py  parse_arguments.py
great_ai/large_file/helper/: __init__.py  bytes_to_megabytes.py  cached_property.py
great_ai/large_file/large_file/: __init__.py  large_file_base.py  large_file_local.py  large_file_mongo.py  large_file_s3.py
great_ai/models/: save_model.py  use_model.py
great_ai/parameters/: automatically_decorate_parameters.py  log_metric.py  parameter.py
great_ai/persistence/: mongodb_driver.py  parallel_tinydb_driver.py  tracing_database_driver.py
great_ai/remote/: __init__.py  call_remote_great_ai.py  call_remote_great_ai_async.py  remote_call_error.py
great_ai/src/great_ai/: __init__.py  __main__.py  parse_arguments.py
great_ai/src/great_ai/great_ai/: __init__.py  constants.py  context.py
great_ai/src/great_ai/great_ai/context/: __init__.py  configure.py  context.py  get_context.py
great_ai/src/great_ai/great_ai/dashboard/: create_dash_app.py  get_description.py  get_footer.py
great_ai/src/great_ai/great_ai/deploy/: __init__.py  create_fastapi_app.py  create_service.py  great_ai.py  process_batch.py  process_single.py  serve.py
great_ai/src/great_ai/great_ai/helper/: __init__.py  assert_function_is_not_finalised.py  freeze_arguments.py  get_args.py  use_http_exceptions.py
great_ai/src/great_ai/great_ai/metrics/: create_dash_app.py  get_description.py  get_filter_from_datatable.py  log_argument.py
great_ai/src/great_ai/great_ai/models/: load_model.py  save_model.py  use_model.py
great_ai/src/great_ai/great_ai/output_models/: __init__.py  classification_output.py  multi_label_classification_output.py  regression_output.py
great_ai/src/great_ai/great_ai/parameters/: __init__.py  automatically_decorate_parameters.py  log_metric.py  parameter.py
great_ai/src/great_ai/great_ai/persistence/: __init__.py  mongodb_driver.py  parallel_tinydb_driver.py  persistence_driver.py  tracing_database_driver.py
great_ai/src/great_ai/great_ai/tracing/: __init__.py  add_ground_truth.py  delete_ground_truth.py  mongodb_driver.py  parallel_tinydb_driver.py  query_ground_truth.py  tracing_context.py  tracing_database.py
great_ai/src/great_ai/great_ai/views/: __init__.py  api_metadata.py  evaluation_feedback_request.py  function_metadata.py  operators.py  query.py  sort_by.py  trace.py  trace_view.py
great_ai/src/great_ai/large_file/: __init__.py  __main__.py  parse_arguments.py
great_ai/src/great_ai/large_file/helper/: progress_bar.py
great_ai/src/great_ai/large_file/large_file/: __init__.py  large_file.py  large_file_local.py  large_file_mongo.py  large_file_s3.py
great_ai/src/great_ai/large_file/models/: data_instance.py
great_ai/src/great_ai/open_s3/: __init__.py  __main__.py  large_file.py
great_ai/src/great_ai/open_s3/helper/: human_readable_to_byte.py  progress_bar.py
great_ai/src/great_ai/utilities/: __init__.py  clean.py  get_sentences.py  lemmatize_text.py  nlp.py  parallel_map.py  unique.py
great_ai/src/great_ai/utilities/config_file/: __init__.py  pattern.py  (+1 more)
great_ai/src/sus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
great_ai/tests/large_file/: test_human_readable_to_byte.py  test_large_file.py
great_ai/tests/open_s3/: test_human_readable_to_byte.py  test_large_file.py
great_ai/tests/sus/: test_clean.py  test_evaluate_ranking.py  test_get_sentences.py  test_lemmatize_text.py  test_match_names.py  test_publication_tei.py  test_unique.py
great_ai/tests/sus/data/: parsed.py
great_ai/tests/utilities/: test_clean.py  test_config_file.py  test_evaluate_ranking.py  test_get_sentences.py  test_language.py  test_lemmatize_text.py  test_lemmatize_token.py  test_match_names.py  test_parallel_map.py  test_publication_tei.py  test_unique.py
great_ai/tests/utilities/data/: 10.1136_bmjspcare-2021-003026.pdf.tei.xml  bad.conf  good.conf  parsed.py
great_ai/tracing/: __init__.py  add_ground_truth.py  delete_ground_truth.py  query_ground_truth.py  tracing_context.py
great_ai/utilities/: __init__.py  chunk.py  clean.py  get_sentences.py  unchunk.py  unique.py
great_ai/utilities/config_file/: config_file.py
great_ai/utilities/data/: american_spellings.py
great_ai/utilities/evaluate_ranking/: evaluate_ranking.py
great_ai/utilities/language/: english_name_of_language.py  is_english.py  predict_language.py
great_ai/utilities/logger/: custom_formatter.py  get_logger.py
great_ai/utilities/match_names/: config.py
great_ai/utilities/parallel_map/: __init__.py  get_config.py  manage_communication.py  manage_serial.py  map_result.py  mapper_function.py  parallel_map.py  parallel_map_configuration.py  simple_parallel_map.py  threaded_parallel_map.py
great_ai/views/: __init__.py  cache_statistics.py  evaluation_feedback_request.py  function_metadata.py  health_check_response.py  operators.py  query.py  sort_by.py  trace.py
great_ai/views/outputs/: classification_output.py  multi_label_classification_output.py  regression_output.py  sequence_labeling_output.py
(+476 files in other folders)
