[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "great_ai"
dynamic = ["version", "description"]
readme = "README.md"
authors = [{ name = "András Schmelczer", email = "andras@schmelczer.dev" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
keywords = ["SE4ML", "MLOps", "AI engineering", "general", "robust", "end-to-end", "automated", "trustworthy", "ai", "deployment"]
requires-python = ">= 3.8"
dependencies = [
    "scikit-learn",
    "matplotlib",
    "numpy",
    "nbconvert",
    "ipython",
    "unidecode >= 1.3.0",
    "syntok >= 1.4.0",
    "langcodes[data] >= 3.3.0",
    "langdetect >= 1.0.9",
    "tinydb >= 4.7.0",
    "boto3 >= 1.23.0",
    "plotly >= 5.8.0",
    "pandas",
    "dash >= 2.4.0",
    "fastapi >= 0.70.0",
    "uvicorn[standard] >= 0.18.0",
    "watchdog >= 2.1.0",
    "typeguard >= 2.10.0",
    "pymongo >= 3.0.0",
    "dill >= 0.3.5.0",
    "aiohttp[speedups] >= 3.8.0",
]

[project.optional-dependencies]
dev = [
    "flit",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "autoflake",
    "isort",
    "black[jupyter]",
    "mypy",
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-subtests",
    "pytest-asyncio"
]

[project.urls]
Homepage = "https://github.com/ScoutinScience/great_ai"
DockerHub = "https://hub.docker.com/repository/docker/schmelczera/great_ai"

[project.scripts]
great_ai = "great_ai:main"
large_file = "great_ai.large_file:main"
