[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "great_ai" # Module's import name/local folder name

[project]
name = "great-ai"  # PyPI package name
dynamic = ["version", "description"]
readme = "README.md"
authors = [{ name = "András Schmelczer", email = "andras@schmelczer.dev" }]
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
]
keywords = ["SE4ML", "MLOps", "AI engineering", "general", "robust", "end-to-end", "automated", "trustworthy", "ai", "deployment"]
requires-python = ">= 3.7"
dependencies = [
    "scikit-learn",
    "matplotlib",
    "numpy",
    "nbconvert",
    "ipython",
    "unidecode >= 1.3.0",
    "syntok >= 1.4.0",
    "langcodes[data] >= 3.3.0",
    "langdetect >= 1.0.9",
    "tinydb >= 4.7.0",
    "boto3 >= 1.23.0",
    "plotly >= 5.8.0",
    "pandas",
    "dash >= 2.4.0",
    "fastapi >= 0.70.0",
    "uvicorn[standard] >= 0.18.0",
    "watchdog >= 2.1.0",
    "typeguard >= 2.10.0",
    "pymongo >= 4.0.0",
    "dill >= 0.3.5.0",
    "tqdm",
    "httpx >= 0.20.0",
]

[project.optional-dependencies]
dev = [
    "flit",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocs-git-revision-date-localized-plugin",
    "autoflake",
    "isort",
    "black[jupyter]",
    "mypy",
    "flake8",
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[project.urls]
Documentation = "https://great-ai.scoutinscience.com"
GitHub = "https://github.com/schmelczer/great-ai"
DockerHub = "https://hub.docker.com/repository/docker/schmelczera/great-ai"

[project.scripts]
great_ai = "great_ai.__main__:main"
great-ai = "great_ai.__main__:main"
large_file = "great_ai.large_file.__main__:main"
large-file = "great_ai.large_file.__main__:main"
