[metadata]
name = great-ai
version = 0.0.11
author = András Schmelczer
author_email = andras@scoutinscience.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ScoutinScience/great-ai
project_urls =
    Bug Tracker = https://github.com/ScoutinScience/great-ai/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.8
install_requires =
    scikit-learn
    matplotlib
    numpy
    nbconvert
    ipython
    unidecode >= 1.3.0
    syntok >= 1.4.0
    langcodes[data] >= 3.3.0
    langdetect >= 1.0.9
    tinydb >= 4.7.0
    boto3 >= 1.23.0
    plotly >= 5.8.0
    pandas
    dash >= 2.4.0
    fastapi >= 0.70.0
    uvicorn[standard] >= 0.18.0
    watchdog >= 2.1.0
    typeguard >= 2.10.0
    pymongo >= 3.0.0
    dill >= 0.3.5.0
    aiohttp[speedups] >= 3.8.0

[options.package_data]
* = *.conf, *.css, *.png

[options.packages.find]
where = src
