[metadata]
name = sus
version = 0.0.3
author = ScoutinScience B.V.
author_email = andras@scoutinscience.com
description = [S]coutinScience [u]tilitie[s]: reusable utilities for text processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ScoutinScience/platform
project_urls =
    Bug Tracker = https://github.com/ScoutinScience/platform/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    click < 8.1.0
    unidecode >= 1.3.0
    multiprocess >= 0.70.0.0
    tqdm >= 4.0.0
    psutil >= 5.9.0
    beautifulsoup4 >= 4.10.0
    lxml >= 4.6.0
    spacy >= 3.2.0
    pydantic >= 1.8.0
    scikit-learn >= 1.0.0
    matplotlib >= 3.5.0
    numpy >= 1.22.0
    langcodes[data] >= 3.3.0
    langdetect >= 1.0.9

[options.packages.find]
where = src
