[metadata]
name = great-ai
version = 0.0.1
author = András Schmelczer
author_email = andras@scoutinscience.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ScoutinScience/great-ai
project_urls =
    Bug Tracker = https://github.com/ScoutinScience/great-ai/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    click < 8.1.0
    unidecode >= 1.3.0
    multiprocess >= 0.70.0.0
    tqdm >= 4.0.0
    psutil >= 5.9.0
    beautifulsoup4 >= 4.10.0
    lxml >= 4.6.0
    spacy >= 3.3.0
    pydantic >= 1.8.0
    scikit-learn >= 1.0.0
    matplotlib >= 3.5.0
    numpy >= 1.22.0
    langcodes[data] >= 3.3.0
    segtok >= 1.5.11
    langdetect >= 1.0.9
    pyaml >= 21.0.0

[options.package_data]
* = *.json, *.yaml, *.yml, *.css

[options.packages.find]
where = src
